@@ -38,9 +38,10 @@ typedef struct {
 } log_entry;
 
 extern int pdb_cancel_unlink_file(pseudo_msg_t *msg);
-extern int pdb_did_unlink_file(char *path);
+extern int pdb_did_unlink_file(char *path, int deleting);
+extern int pdb_did_unlink_files(int deleting);
 extern int pdb_link_file(pseudo_msg_t *msg);
-extern int pdb_may_unlink_file(pseudo_msg_t *msg);
+extern int pdb_may_unlink_file(pseudo_msg_t *msg, int deleting);
 extern int pdb_unlink_file(pseudo_msg_t *msg);
 extern int pdb_unlink_file_dev(pseudo_msg_t *msg);
 extern int pdb_update_file(pseudo_msg_t *msg);
@@ -48,6 +49,7 @@ extern int pdb_update_file_path(pseudo_msg_t *msg);
 extern int pdb_update_inode(pseudo_msg_t *msg);
 extern int pdb_unlink_contents(pseudo_msg_t *msg);
 extern int pdb_rename_file(const char *oldpath, pseudo_msg_t *msg);
+extern int pdb_renumber_all(dev_t from, dev_t to);
 extern int pdb_find_file_exact(pseudo_msg_t *msg);
 extern int pdb_find_file_path(pseudo_msg_t *msg);
 extern int pdb_find_file_dev(pseudo_msg_t *msg);
